--- a/CIV/CIV.csproj
+++ b/CIV/CIV.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -15,28 +15,28 @@
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<CustomCommands>
-			<CustomCommands>
-				<Command>
-					<type>BeforeBuild</type>
-					<command>$(AntlrCommand) -no-listener -no-visitor -package CIV.Ccs CcsLexer.g4</command>
-					<workingdir>${ProjectDir}/Ccs</workingdir>
-				</Command>
-				<Command>
-					<type>BeforeBuild</type>
-					<command>$(AntlrCommand) -package CIV.Ccs CcsParser.g4</command>
-					<workingdir>${ProjectDir}/Ccs</workingdir>
-				</Command>
-				<Command>
-					<type>BeforeBuild</type>
-					<command>$(AntlrCommand) -no-listener -no-visitor -package CIV.Hml HmlLexer.g4</command>
-					<workingdir>${ProjectDir}/Hml</workingdir>
-				</Command>
-				<Command>
-					<type>BeforeBuild</type>
-					<command>$(AntlrCommand) -package CIV.Hml HmlParser.g4</command>
-					<workingdir>${ProjectDir}/Hml</workingdir>
-				</Command>
-			</CustomCommands>
+		  <CustomCommands>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>java -cp /Users/luca/.nuget/packages/antlr4/4.5.3/tools/antlr4-csharp-4.5.3-complete.jar org.antlr.v4.CSharpTool -Dlanguage=CSharp_v2_0 -no-listener -no-visitor -package CIV.Ccs CcsLexer.g4</command>
+		      <workingdir>${ProjectDir}/Ccs</workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>java -cp /Users/luca/.nuget/packages/antlr4/4.5.3/tools/antlr4-csharp-4.5.3-complete.jar org.antlr.v4.CSharpTool -Dlanguage=CSharp_v2_0 -package CIV.Ccs CcsParser.g4</command>
+		      <workingdir>${ProjectDir}/Ccs</workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>java -cp /Users/luca/.nuget/packages/antlr4/4.5.3/tools/antlr4-csharp-4.5.3-complete.jar org.antlr.v4.CSharpTool -Dlanguage=CSharp_v2_0 -no-listener -no-visitor -package CIV.Hml HmlLexer.g4</command>
+		      <workingdir>${ProjectDir}/Hml</workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>java -cp /Users/luca/.nuget/packages/antlr4/4.5.3/tools/antlr4-csharp-4.5.3-complete.jar org.antlr.v4.CSharpTool -Dlanguage=CSharp_v2_0 -package CIV.Hml HmlParser.g4</command>
+		      <workingdir>${ProjectDir}/Hml</workingdir>
+		    </Command>
+		  </CustomCommands>
 		</CustomCommands>
 		<NoWarn>1701;1702;1705;3021</NoWarn>
 	</PropertyGroup>
