--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ dotnet: 2.0.0
 dist: trusty
 solution: CIV.sln
 script:
-  - cd CIV && dotnet restore && dotnet build
-  - cd CIV.Test && dotnet test
+  - dotnet build
+  - dotnet test
