--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp
 mono: none
-dotnet: 2.0.0
+dotnet: 2.0.0-preview1
 dist: trusty
 solution: CIV.sln
 script:
   - dotnet build
-  - dotnet test
+  - dotnet test CIV.Test/CIV.Test.csproj
