--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: csharp
 mono: none
-dotnet: 2.0.0-preview1
+dotnet: 2.0.0
 dist: trusty
 solution: CIV.sln
+env:
+    # Set the DOTNET_SKIP_FIRST_TIME_EXPERIENCE environment variable to stop wasting time caching packages
+  - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true
+    # Disable sending usage data to Microsoft
+  - DOTNET_CLI_TELEMETRY_OPTOUT=true
+
 script:
   - dotnet build
   - dotnet test CIV.Test/CIV.Test.csproj
