--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ mono: none
 dotnet: 2.0.0
 dist: trusty
 solution: CIV.sln
+os:
+  - osx
 env:
     # Set the DOTNET_SKIP_FIRST_TIME_EXPERIENCE environment variable to stop wasting time caching packages
   - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true
