--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-language: csharp
-mono: none
-dotnet: 2.0.0-preview1-005977
-dist: trusty
-solution: CIV.sln
+# language: csharp
+# mono: none
+# dotnet: 2.0.0-preview1-005977
+# dist: trusty
+# solution: CIV.sln
 os:
   - osx
 install: ./dotnet-install.sh
