--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,9 @@ install: ./dotnet-install.sh
 
 env:
     # Set the DOTNET_SKIP_FIRST_TIME_EXPERIENCE environment variable to stop wasting time caching packages
-  - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true
-    # Disable sending usage data to Microsoft
-  - DOTNET_CLI_TELEMETRY_OPTOUT=true
+  - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true DOTNET_CLI_TELEMETRY_OPTOUT=true
 
 script:
-  - dotnet restore
-  - dotnet build CIV/CIV.csproj -c Release
-  - dotnet test CIV.Test/CIV.Test.csproj
+  - /Users/travis/.dotnet/dotnet restore
+  - /Users/travis/.dotnet/dotnet build CIV/CIV.csproj -c Release
+  - /Users/travis/.dotnet/dotnet test CIV.Test/CIV.Test.csproj
