--- a/CIV/CIV.csproj
+++ b/CIV/CIV.csproj
@@ -47,7 +47,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Antlr4" Version="4.6.1-beta001" />
-		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.4.0-preview1-25305-02" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.4.0-*" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="Ccs\" />
