--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ env:
     - DOTNET_CLI_TELEMETRY_OPTOUT=true
 
 script:
-  - /Users/travis/.dotnet/dotnet restore
+  - /Users/travis/.dotnet/dotnet restore --disable-parallel
   - /Users/travis/.dotnet/dotnet build CIV/CIV.csproj -c Release
   - /Users/travis/.dotnet/dotnet test CIV.Test/CIV.Test.csproj
