Set Travis notifications: update README

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,8 @@ script:
   - /Users/travis/.dotnet/dotnet restore --disable-parallel
   - /Users/travis/.dotnet/dotnet build CIV/CIV.csproj -c Release
   - /Users/travis/.dotnet/dotnet test CIV.Test/CIV.Test.csproj
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
