Massive refactoring of CCS classes
* Added a facade to the whole thing
* Started redefining lots of classes as private

--- a/CIV.Test/CIV.Test.csproj
+++ b/CIV.Test/CIV.Test.csproj
@@ -19,5 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CIV\CIV.csproj" />
+    <ProjectReference Include="..\CIV.Ccs\CIV.Ccs.csproj" />
   </ItemGroup>
 </Project>
