--- a/CIV.Ccs/CIV.Ccs.csproj
+++ b/CIV.Ccs/CIV.Ccs.csproj
@@ -47,4 +47,7 @@
 	   <Folder Include="gen\" />
 	   <Folder Include="Helpers\" />
 	 </ItemGroup>
+	 <ItemGroup>
+	   <ProjectReference Include="..\CIV.Interfaces\CIV.Interfaces.csproj" />
+	 </ItemGroup>
 </Project>
