--- a/CIV.Interfaces/CIV.Interfaces.csproj
+++ b/CIV.Interfaces/CIV.Interfaces.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Antlr4.Runtime" Version="4.6.1-beta002" />
+  </ItemGroup>
 </Project>
