Add reference to Interfaces inside CIV.csproj

--- a/CIV/CIV.csproj
+++ b/CIV/CIV.csproj
@@ -11,5 +11,6 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\CIV.Ccs\CIV.Ccs.csproj" />
 	  <ProjectReference Include="..\CIV.Hml\CIV.Hml.csproj" />
+	  <ProjectReference Include="..\CIV.Interfaces\CIV.Interfaces.csproj" />
 	</ItemGroup>
 </Project>
