--- a/CIV/CIV.csproj
+++ b/CIV/CIV.csproj
@@ -12,5 +12,6 @@
 	  <ProjectReference Include="..\CIV.Ccs\CIV.Ccs.csproj" />
 	  <ProjectReference Include="..\CIV.Hml\CIV.Hml.csproj" />
 	  <ProjectReference Include="..\CIV.Interfaces\CIV.Interfaces.csproj" />
+	  <ProjectReference Include="..\CIV.Formats\CIV.Formats.csproj" />
 	</ItemGroup>
 </Project>
