--- a/CIV.Ccs/CIV.Ccs.csproj
+++ b/CIV.Ccs/CIV.Ccs.csproj
@@ -16,6 +16,7 @@
 	 <ItemGroup>
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.4.0-*" />
     <PackageReference Include="Antlr4.Runtime" Version="4.6.1-beta002" />
+    <PackageReference Include="System.Interactive" Version="3.1.1" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
