--- a/CIV.Ccs/CIV.Ccs.csproj
+++ b/CIV.Ccs/CIV.Ccs.csproj
@@ -24,12 +24,12 @@
       <CustomCommands>
         <Command>
           <type>BeforeBuild</type>
-          <command>$(AntlrCommand) -o ../gen -package ${ProjectName} CcsLexer.g4</command>
+          <command>java -jar /Users/luca/.nuget/packages/antlr4.codegenerator/4.6.1-beta002/tools/antlr4-csharp-4.6.1-SNAPSHOT-complete.jar -Dlanguage=CSharp_v4_5 -o ../gen -package ${ProjectName} CcsLexer.g4</command>
           <workingdir>${ProjectDir}/grammar</workingdir>
         </Command>
         <Command>
           <type>BeforeBuild</type>
-          <command>$(AntlrCommand) -o ../gen -package ${ProjectName} CcsParser.g4</command>
+          <command>java -jar /Users/luca/.nuget/packages/antlr4.codegenerator/4.6.1-beta002/tools/antlr4-csharp-4.6.1-SNAPSHOT-complete.jar -Dlanguage=CSharp_v4_5 -o ../gen -package ${ProjectName} CcsParser.g4</command>
           <workingdir>${ProjectDir}/grammar</workingdir>
         </Command>
       </CustomCommands>
