Rename CIV.Interfaces to CIV.Common (part3)
* Also remove all CIV.Ccs references from CIV.Hml

--- a/CIV.Ccs/CIV.Ccs.csproj
+++ b/CIV.Ccs/CIV.Ccs.csproj
@@ -49,6 +49,6 @@
 	   <Folder Include="Helpers\" />
 	 </ItemGroup>
 	 <ItemGroup>
-	   <ProjectReference Include="..\CIV.Interfaces\CIV.Interfaces.csproj" />
+	   <ProjectReference Include="..\CIV.Common\CIV.Common.csproj" />
 	 </ItemGroup>
 </Project>
