--- a/CIV.Hml/CIV.Hml.csproj
+++ b/CIV.Hml/CIV.Hml.csproj
@@ -15,8 +15,7 @@
     <Folder Include="gen\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CIV.Ccs\CIV.Ccs.csproj" />
-    <ProjectReference Include="..\CIV.Interfaces\CIV.Interfaces.csproj" />
+    <ProjectReference Include="..\CIV.Common\CIV.Common.csproj" />
   </ItemGroup>
 
 
