--- a/CIV.Test/CIV.Test.csproj
+++ b/CIV.Test/CIV.Test.csproj
@@ -21,6 +21,6 @@
     <ProjectReference Include="..\CIV\CIV.csproj" />
     <ProjectReference Include="..\CIV.Ccs\CIV.Ccs.csproj" />
     <ProjectReference Include="..\CIV.Hml\CIV.Hml.csproj" />
-    <ProjectReference Include="..\CIV.Interfaces\CIV.Interfaces.csproj" />
+    <ProjectReference Include="..\CIV.Common\CIV.Common.csproj" />
   </ItemGroup>
 </Project>
