Cleanup CIV.HML

--- a/CIV.Hml/CIV.Hml.csproj
+++ b/CIV.Hml/CIV.Hml.csproj
@@ -39,4 +39,8 @@
 
 
 	
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType></DebugType>
+    <NoWarn>1701;1702;1705;3021</NoWarn>
+  </PropertyGroup>
 </Project>
